[package]
name = "kson"
version = "0.1.0"
email = "kinggunil@gmail.com"
edition = "2024"
description = "easy json manaing library for scripting language developers"
license = "MIT"
repository = "https://github.com/kinggunil/kson"
documentation = "https://docs.rs/kson"
homepage = "https://github.com/kinggunil/kson"

[dependencies]
serde_json = "1.0"

