[package]
name = "kson"
version = "0.1.0"
email = "kinggunil@gmail.com"
edition = "2021"
description = "An easy-to-use JSON management library designed for developers familiar with scripting languages."
license = "MIT"
repository = "https://github.com/kinggunil/kson"
documentation = "https://docs.rs/kson"
homepage = "https://github.com/kinggunil/kson"

[dependencies]
serde_json = "1.0"

